@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-16T16:12:35Z",
-  "count_outdated" : 42,
-  "uniques_outdated" : 32,
+  "timestamp" : "2023-07-17T01:06:40Z",
+  "count_outdated" : 44,
+  "uniques_outdated" : 33,
   "count" : 52,
   "uniques" : 39,
   "clones" : [
-    {
-      "timestamp": "2023-07-02T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-03T00:00:00Z",
       "count": 1,
